infrastructure/traefik/ingress/root-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: root-ingress
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`k8s.robert-wiesner.de`)
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: redirect-github
