infrastructure/traefik/ingress/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.k8s.robert-wiesner.de`)
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: basic-auth
